syntax = "proto3";
package pb;
option go_package = "aqrus/Microservice/gateway-api/pb";
import "products/product_messages.proto";

message CreateProductRequest {
    Product product = 1;
}