syntax = "proto3";
package pb;
option go_package = "aqrus/Microservice/gateway-api/pb";

message CreateProductResponse {
    string id = 1;
}
